                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 05-06-2005 added: Combined spectrums into a single .vis with presets, changeable on the fly.
 - 05-06-2005 fixed: dvdplayer would fail to play from scrambled disc untill mplayer had once played it
 - 05-06-2005 fixed: XBMC would sometimes lockup during FF/RW when using Hardware Overlays
 - 05-06-2005 added: Write to log when memory allocation failes in a dll
 - 05-06-2005 fixed: memory overrun when reading EEPROM (not as bad as it sounds). HalReadSMBusValue() allways touched 4bytes on each call.
 - 05-06-2005 added: Faster path lookups in CFileItemList (for DirectoryCache mainly) thanks to desertbear.
 - 05-05-2005 fixed: minor crash fix when switching between gui and fullscreen
 - 05-06-2005 fixed: PAPlayer correctly handles track changes where the number of channels changes + handles 6 channel tracks correctly.
 - 04-06-2005 added: sf.net patch [1209466] Multiple RSS feeds concatenated - thanks to desertbear!
 - 04-06-2005 fixed: long rss feeds could crash xbmc when using ttf fonts.
 - 04-06-2005 added: All Winamp milkdrops "Winamp-presets(436).zip", no shortened filenames. Zip 'normal' compression used.
 - 04-06-2005 changed: Ogg codec now uses the FileReader.
 - 04-06-2005 changed: Updated MPCCodec.dll so that MPC files use the FileReader.
 - 04-06-2005 updated: [ 1212669 ] Newest BiosIDs.ini (Thnx to bubbadood)
 - 04-06-2005 changed: added zipped G-Force presetfiles.
 - 04-06-2005 updated: Dutch language file (Thnx to tijmengozer)
 - 04-06-2005 updated: German language file
 - 04-06-2005 updated: German (Austrian) language file (Thnx to CEOMR)
 - 04-06-2005 updated: Finnish language file (Thnx to jutski)